tests/src/frontend/syntax/invalid/lvalue_in_match.sk
fun main(): String {
  x.!y match { _ -> "Fail" }
}
